# monte-carlo-tree-search

./: .gitmodules  CMakeLists.txt  log.txt
data/: samples.pb
include/: common.h  data.h  game.h  msts.h  node.h
mcts/include/: board.h  data.h  game.h  mcts_self_player.h
mcts/src/: main.cc
proto/: states.pb.cc  states.pb.h  states.proto  states_pb2.py
python/: read.py
src/: main.cpp
third/: install.sh
